# power-safety-wiki

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  QUICK_START.md  README.md  getting-started.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.gitee/pipelines/: deploy.yml
.github/workflows/: deploy-gh-pages.yml  sync-from-gitee.yml
about/: index.html
astro-content-migration/: README.md
astro-content-migration/content/incidents/: _template.md  index.md
astro-content-migration/content/pages/: about.md  home.md
astro-content-migration/guides/: content-team-getting-started.md  contributing.md  tech-team-quick-start.md
astro-content-migration/project/: README.md
docs/: about.md  index.md
docs/assets/css/: custom.css
docs/incidents/: _template.md  index.md
docs/incidents/1965-us-northeast/: index.md
docs/incidents/2003-italy/: index.md
docs/incidents/2003-us-canada/: index.md
docs/incidents/2006-europe/: index.md
docs/incidents/2012-india/: index.md
incidents/: index.html
incidents/1965-us-northeast/: index.html
incidents/2003-italy/: index.html
incidents/2003-us-canada/: index.html
incidents/2006-europe/: index.html
incidents/2012-india/: index.html
incidents/_template/: index.html
power-safety-html-visual-prototype-astro/: README.md  package-lock.json  package.json
power-safety-html-visual-prototype-astro/src/content/: config.ts
scripts/: deploy.sh  start.bat  start.sh
search/: search_index.json
(+18 files in other folders)
